<?xml version="1.0" encoding="UTF-8"?>
    <LinearLayout
    android:gravity="end"
    android:id="@+id/linearScreenThree"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylegray_900"
    tools:context=".signup.EmailVerifyActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnHelp"
            android:layout_height="@dimen/_29pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_29pxv"
            android:layout_width="@dimen/_66pxh"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_12pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@string/lbl_help" android:textAllCaps="false"
            style="@style/btnSolidRounded" tools:text="@string/lbl_help"/>
        <ImageView android:id="@+id/imageVector"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_125pxh"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_159pxv"
            android:layout_width="@dimen/_150pxh"
            android:scaleType="fitXY" android:src="@drawable/img_vector"
            tools:ignore="ContentDescription" tools:src="@drawable/img_vector"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtVerifiedemail"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_37pxv"
            android:layout_width="match_parent"
            android:textAlignment="center"
            android:singleLine="false"
            android:text="@string/msg_verified_email"
            style="@style/txtInterbold32_1" tools:text="@string/msg_verified_email"/>
        <TextView android:gravity="center_horizontal"
            android:id="@+id/txtVerfiiedyoure"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_18pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_verfiied_your_e"
            style="@style/txtInterblack16_1" tools:text="@string/msg_verfiied_your_e"/>
        <TextView android:ellipsize="end"
            android:id="@+id/txtChangeemailID"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_45pxv"
            android:layout_width="wrap_content"
            android:singleLine="true"
            android:text="@string/msg_change_email_id"
            style="@style/txtInterblack16_2" tools:text="@string/msg_change_email_id"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnGetStarted"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_122pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/lbl_get_started"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_get_started"/>
    </LinearLayout>
