<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:gravity="center_horizontal"
    android:id="@+id/linearColumnnotov1credit"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/_3pxh"
    android:layout_width="match_parent"
    tools:context=".signup.signinHome"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    >

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#111111"
        style="?android:attr/progressBarStyle"/>

    <LinearLayout android:gravity="center_horizontal"
        android:id="@+id/linearScreenOne"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" >
        <ImageView android:id="@+id/imageNotov1credit"
            android:layout_gravity="center_horizontal"
            android:layout_height="@dimen/_114pxh"
            android:layout_marginTop="@dimen/_100pxv"
            android:layout_marginEnd="@dimen/_112pxh"
            android:layout_marginStart="@dimen/_112pxh"
            android:layout_width="@dimen/_148pxh"
            android:scaleType="fitCenter"
            android:src="@drawable/img_notov1credit"
            tools:ignore="ContentDescription" tools:src="@drawable/img_notov1credit"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearColumnwelcome"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_95pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" >
            <TextView android:ellipsize="end"
                android:id="@+id/txtWelcome"
                android:layout_gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_25pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_18pxv"
                android:layout_width="wrap_content"
                android:singleLine="true"
                android:textStyle="normal"
                android:text="@string/lbl_welcome"
                style="@style/txtInterbold32" tools:text="@string/lbl_welcome"/>
            <TextView android:gravity="center"
                android:id="@+id/txtMoneyTrapisWo"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_35pxh"
                android:layout_marginStart="@dimen/_35pxh"
                android:layout_marginTop="@dimen/_4pxv"
                android:layout_width="match_parent"
                android:text="@string/msg_moneytrap_is_wo"
                style="@style/txtInterblack24" tools:text="@string/msg_moneytrap_is_wo"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearButton"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_33pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylelime_A200cornerRadius">
                <ImageView android:id="@+id/imageDevicongoogle"
                    android:layout_height="@dimen/_26pxh"
                    android:layout_marginBottom="@dimen/_13pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_13pxv"
                    android:layout_width="@dimen/_26pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/img_devicongoogle"
                    tools:ignore="ContentDescription" tools:src="@drawable/img_devicongoogle"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContinuewithG"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_95pxh"
                    android:layout_marginStart="@dimen/_55pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_weight="0.85"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@string/msg_continue_with_g"
                    style="@style/txtInterbold15" tools:text="@string/msg_continue_with_g"/>
            </LinearLayout>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearButton2"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_21pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_32pxv"
                android:layout_width="match_parent"
                android:orientation="horizontal" style="@style/groupStylelime_A200cornerRadius">
                <ImageView android:id="@+id/imageStreamlineemoj"
                    android:layout_height="@dimen/_25pxh"
                    android:layout_marginBottom="@dimen/_14pxv"
                    android:layout_marginStart="@dimen/_12pxh"
                    android:layout_marginTop="@dimen/_14pxv"
                    android:layout_width="@dimen/_23pxh"
                    android:scaleType="fitXY"
                    android:src="@drawable/ic_baseline_phone_24"
                    tools:ignore="ContentDescription" tools:src="@drawable/ic_baseline_phone_24"/>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtContinuewithm"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_18pxv"
                    android:layout_marginEnd="@dimen/_62pxh"
                    android:layout_marginStart="@dimen/_26pxh"
                    android:layout_marginTop="@dimen/_16pxv"
                    android:layout_weight="0.9"
                    android:layout_width="0dp"
                    android:singleLine="true"
                    android:text="@string/msg_continue_with_m"
                    style="@style/txtInterbold15" tools:text="@string/msg_continue_with_m"/>
            </LinearLayout>
            <TextView android:gravity="center_horizontal"
                android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_20pxv"
                android:layout_marginEnd="@dimen/_23pxh"
                android:layout_marginStart="@dimen/_25pxh"
                android:layout_marginTop="@dimen/_50pxv"
                android:layout_width="match_parent"
                android:textSize="14sp"
                android:text="@string/msg_by_pressing_co"
                 tools:text="@string/msg_by_pressing_co"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
