<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout android:gravity="center_horizontal"
    android:id="@+id/linearColumnnotov1credit"
    android:layout_height="match_parent"
    android:layout_marginEnd="@dimen/_3pxh"
    android:layout_width="match_parent"
    android:orientation="vertical"
    style="@style/groupStylegray_xxx"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTintMode="src_atop"
        android:indeterminateTint="#111111" />

        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearScreenTwo"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylegray_xxx">
            <ImageView android:id="@+id/imageNotov1credit"
                android:layout_gravity="center_horizontal"
                android:layout_height="@dimen/_114pxh"
                android:layout_marginEnd="@dimen/_112pxh"
                android:layout_marginStart="@dimen/_112pxh"
                android:layout_marginTop="@dimen/_100pxv"
                android:layout_width="@dimen/_148pxh"
                android:scaleType="fitCenter"
                android:src="@drawable/img_notov1credit"
                tools:ignore="ContentDescription" tools:src="@drawable/img_notov1credit"/>
            <LinearLayout android:gravity="end"
                android:id="@+id/linearColumnhelp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_51pxv"
                android:layout_width="match_parent"
                android:orientation="vertical" style="@style/groupStylewhite_A700cornerRadius">
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnHelp"
                    android:layout_height="@dimen/_29pxv"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_11pxv"
                    android:layout_width="@dimen/_66pxh"
                    android:paddingBottom="@dimen/_5pxv"
                    android:paddingEnd="@dimen/_12pxh"
                    android:paddingStart="@dimen/_12pxh"
                    android:paddingTop="@dimen/_5pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_help"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/lbl_help"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtLetsverifyyo"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent"
                    android:text="@string/msg_let_s_verify_yo"
                    style="@style/txtInterbold32" tools:text="@string/msg_let_s_verify_yo"/>
                <TextView android:gravity="center_horizontal"
                    android:id="@+id/txtAllyourtransa"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_20pxv"
                    android:layout_width="match_parent"
                    android:text="@{screenTwoVM.screenTwoModel.txtAllyourtransa}"
                    style="@style/txtInterblack16" tools:text="@string/msg_all_your_transa"/>
                <LinearLayout android:gravity="start"
                    android:id="@+id/linearButton"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_21pxh"
                    android:layout_marginStart="@dimen/_21pxh"
                    android:layout_marginTop="@dimen/_59pxv"
                    android:layout_width="match_parent"
                    android:orientation="horizontal" style="@style/groupStylelime_A200cornerRadius">
                    <ImageView android:id="@+id/imageDevicongoogle"
                        android:layout_height="@dimen/_26pxh"
                        android:layout_marginBottom="@dimen/_13pxv"
                        android:layout_marginStart="@dimen/_12pxh"
                        android:layout_marginTop="@dimen/_13pxv"
                        android:layout_width="@dimen/_26pxh"
                        android:scaleType="fitXY"
                        android:src="@drawable/img_devicongoogle"
                        tools:ignore="ContentDescription" tools:src="@drawable/img_devicongoogle"/>
                    <TextView android:ellipsize="end"
                        android:id="@+id/txtContinuewithG"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/_18pxv"
                        android:layout_marginEnd="@dimen/_95pxh"
                        android:layout_marginStart="@dimen/_55pxh"
                        android:layout_marginTop="@dimen/_16pxv"
                        android:layout_weight="0.85"
                        android:layout_width="0dp"
                        android:singleLine="true"
                        android:text="@{screenTwoVM.screenTwoModel.txtContinuewithG}"
                        style="@style/txtInterbold15" tools:text="@string/msg_continue_with_g"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
