<?xml version="1.0" encoding="UTF-8"?>
<ScrollView android:gravity="start"
    android:id="@+id/linearScreenFour"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".permission.TermandCondition"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView android:ellipsize="end"
            android:id="@+id/txtAppspermission"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_22pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_apps_permission"
            style="@style/txtInterbold32_1" tools:text="@string/msg_apps_permission"/>
        <TextView android:id="@+id/txtForthepurpose"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:text="@string/msg_for_the_purpose"
            style="@style/txtInterblack16_1" tools:text="@string/msg_for_the_purpose"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassage"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_34pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageUser"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_30pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_user"
                tools:ignore="ContentDescription" tools:src="@drawable/img_user"/>
            <TextView android:id="@+id/txtDescription"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_9pxh"
                android:textColor="@color/gray_700"
                android:layout_weight="0.91" android:layout_width="0dp"
                android:text="@string/msg_sms_our_app_co"
                style="@style/txtInterblack14" tools:text="@string/msg_sms_our_app_co"/>
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassage2"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowright"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_30pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_arrowright"
                tools:ignore="ContentDescription" tools:src="@drawable/img_arrowright"/>
            <TextView android:id="@+id/txtDescriptionOne"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.95" android:layout_width="0dp"
                android:text="@string/msg_files_media"
                android:textColor="@color/gray_700"
                style="@style/txtInterblack14" />
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassage21"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowright1"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_30pxh"
                android:scaleType="fitXY"
                android:src="@drawable/ic_location"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_location"/>
            <TextView android:id="@+id/txtDescriptionOne1"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.95" android:layout_width="0dp"
                android:text="Location,We collect and moniter information about your device location to help with serviceability of your credit line application,reduce risk associated with your application and provided pre-approved customized offers. This also helps us verify your address,make a better credit risk decision and expedite KYC process."
                android:textColor="@color/gray_700"
                style="@style/txtInterblack14" />
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassage21x"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowright1x"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_30pxh"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_camera_24"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_baseline_camera_24"/>
            <TextView android:id="@+id/txtDescriptionOne1x"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.95" android:layout_width="0dp"
                android:text="This app nedds camaera access so that can you easily captured required kyc details"
                android:textColor="@color/gray_700"
                style="@style/txtInterblack14" />
        </LinearLayout>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearPassage21xx"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_20pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageArrowright1xx"
                android:layout_height="@dimen/_30pxh"
                android:layout_marginTop="@dimen/_2pxv"
                android:layout_width="@dimen/_30pxh"
                android:scaleType="fitXY"
                android:src="@drawable/ic_baseline_contacts_24"
                tools:ignore="ContentDescription"
                tools:src="@drawable/ic_baseline_contacts_24"/>
            <TextView android:id="@+id/txtDescriptionOne1xx"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_13pxh"
                android:layout_weight="0.95" android:layout_width="0dp"
                android:text="Contact details Our app collects, stores and transmits to MoneyTap servers, relevant information from contact details that you receive from service &amp; product providers (such as retailers, financial institutions, mobile carriers, and utility companies) with your specific consent. This helps us improve your access to financial services and products, &amp; to enable quick disbursals. We will only access business number from alphanumeric senders and use this information solely to provide our services.

We do not collect, read, or store personal contact details. We will use this information to facilitate lending services and as per the requirements of lending partners or applicable law."
                android:textColor="@color/gray_700"
                style="@style/txtInterblack14" />
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnContinueToPermissions"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_35pxv"
            android:layout_width="match_parent"
            android:paddingBottom="@dimen/_17pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_17pxv" android:singleLine="true"
            android:text="@string/msg_continue_to_per"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_continue_to_per"/>
        <TextView android:ellipsize="end"
            android:gravity="center_horizontal"
            android:id="@+id/txtWeneedthesep"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_24pxv"
            android:layout_marginEnd="@dimen/_24pxh"
            android:layout_marginStart="@dimen/_24pxh"
            android:layout_marginTop="@dimen/_17pxv"
            android:layout_width="match_parent"
            android:singleLine="true"
            android:text="@string/msg_we_need_these_p"
            style="@style/txtInterbold15_1" tools:text="@string/msg_we_need_these_p"/>
    </LinearLayout>
    </ScrollView>
